// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ iHkOCJ"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV gJAork sc-iBkjds jECwvP"
      color="primary"
      data-testid="menu-toggle"
      disabled=""
      font-size="13px"
      height="32px"
    >
      Save
      <div
        class="sc-hKMtZM gHErep"
      />
      <span
        class="sc-ftvSup cgVcmC"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#B3BAC1"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ksZaOG fgOtcW"
  >
    <div
      class="sc-breuTD gslte"
      id=":r2:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ iHkOCJ"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV gJAork sc-iBkjds jECwvP"
      color="primary"
      data-testid="menu-toggle"
      font-size="13px"
      height="32px"
    >
      Save
      <div
        class="sc-hKMtZM gHErep"
      />
      <span
        class="sc-ftvSup cgVcmC"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#FDFEFF"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ksZaOG kYwgGm"
  >
    <div
      class="sc-fnykZs kOawsR fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-hAZoDl cLLXyY"
      />
    </div>
    <div
      class="sc-breuTD gslte"
      id=":r0:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ iHkOCJ"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV AXAtv sc-jSMfEi xUbxp"
      color="primary"
      disabled=""
      font-size="13px"
      height="32px"
    >
      Save
    </button>
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV AXAtv sc-gKXOVf cwUGoA"
      color="primary"
      data-testid="menu-toggle"
      disabled=""
      font-size="13px"
      height="32px"
    >
      <span
        class="sc-ftvSup cgVcmC"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#B3BAC1"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ksZaOG fgOtcW"
  >
    <div
      class="sc-breuTD gslte"
      id=":r6:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ iHkOCJ"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV AXAtv sc-jSMfEi xUbxp"
      color="primary"
      font-size="13px"
      height="32px"
    >
      Save
    </button>
    <button
      class="sc-gsnTZi sc-dkzDqf bveZbV AXAtv sc-gKXOVf cwUGoA"
      color="primary"
      data-testid="menu-toggle"
      font-size="13px"
      height="32px"
    >
      <span
        class="sc-ftvSup cgVcmC"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#FDFEFF"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-ksZaOG kYwgGm"
  >
    <div
      class="sc-fnykZs kOawsR fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-hAZoDl cLLXyY"
      />
    </div>
    <div
      class="sc-breuTD gslte"
      id=":r4:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-papXJ gHZzeo"
      >
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-evZas htEONu"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-crXcEl cpBNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-iqcoie"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
